--- a/Tosi.html
+++ b/Tosi.html
@@ -31,7 +31,7 @@
 <h3><center><big><big>LUCA ANTONIO TOSI</big></big><br><br>
 <big>(1811-1876)</big></center></h3><br><br><br>
 <h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
-<p><big><strong>LUCA ANTONIO – talvolta, denominato semplicemente <strong>Luca</strong> – TOSI</strong>,  medico, amministratore locale, letterato, studioso e patriota, nacque a Vignola il 27 (o 28) ottobre 1811.<br>
+<p><big><strong>LUCA ANTONIO</strong> – talvolta, denominato semplicemente <strong>Luca</strong> – <strong>TOSI</strong>,  medico, amministratore locale, letterato, studioso e patriota, nacque a Vignola il 27 (o 28) ottobre 1811.<br>
 Questo personaggio era il primogenito di Barlamo juniore (1785-1816), stimato medico condotto del paese ed erede di possedimenti nel Ferrarese (alcuni di essi, ora si trovano nella città metropolitana di Rovigo, e proprio in quella zona, nel paese di Crespino, il suddetto Barlamo era venuto alla luce) e nel Modenese (a Camposanto, a Savignano sul Panaro, a Spilamberto e a Vignola), e di Angelica Maria Bellucci (1784-1876), appartenente a una delle famiglie più cospicue di Vignola.<br>
 Di idee liberali, Tosi manifestò subito una ferma avversione nei confronti del regime austroestense e non esitò a offrire il suo aiuto dapprima per giungere all’unificazione nazionale sotto Casa Savoia e in seguito per consolidare il nuovo Regno e “fare gli Italiani”, diventando in questo modo un’insigne figura del Risorgimento a Vignola e nei dintorni.<br>  
 
@@ -45,7 +45,7 @@ Noto per diverse iniziative a favore dei concittadini più bisognosi, il persona
 
 Essendosi prodigato alacremente per tutta la vita affinché le condizioni dei propri concittadini potessero migliorare da ogni punto di vista, Tosi va riconosciuto come una delle figure più significative della Vignola ottocentesca e, dunque, occorre affiancarlo per importanza a <strong>Francesco Selmi</strong> (1817-1881), <strong>Alessandro Plessi</strong> (1824-1907) e <strong>Giovanni Rodolfi</strong> (1828-1896).<br>
 
-Malato di cuore da tempo, il nostro personaggio spirò il 2 dicembre 1876 nella Villa – o Casino – Bellucci (che ben presto cominciò a prendere sempre più spesso la denominazione composta di Tosi Bellucci) del paese natale. Fu inumato nel camposanto vignolese all’epoca in uso (era stato creato durante il Regno d’Italia napoleonico); trascorso poco meno di un quarto di secolo, una volta edificata la cappella Tosi Bellucci nel costruendo nuovo cimitero cittadino (quello ancora utilizzato), si provvide a traslarvi i suoi resti mortali.</big></p><br><br><br>
+Malato di cuore da tempo, il nostro personaggio spirò il 2 dicembre 1876 nella Villa – o Casino – Bellucci (che ben presto cominciò a prendere sempre più spesso la denominazione composta di Tosi Bellucci) del paese natale. Fu sepolto nel camposanto vignolese all’epoca in uso (era stato creato durante il Regno d’Italia napoleonico); trascorso poco meno di un quarto di secolo, una volta edificata la cappella Tosi Bellucci nel costruendo nuovo cimitero cittadino (quello ancora utilizzato), si provvide a traslarvi i suoi resti mortali.</big></p><br><br><br>
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><big><big><center>Prima di copertina di <i>Storia cronologica di Vignola ad uso delle scuole del cav. prof. Luca Tosi Vignolese</i>,<br> Vignola, Tipografia di Antonio Bizzarri, 1872. Fonte: google.com</center></big></big></p>
