--- a/dedica.html
+++ b/dedica.html
@@ -28,14 +28,16 @@
 </header>
 <section>
 <p><big><strong><a href="Favoleggiatore.html">Indice</a></big></big></strong></center></p><br><br>
-<h3><center><big><big><strong>A mia Madre ed a mia Moglie,[1]</strong></big></big></center></h3><br><br>
+<h3><center><big><big><strong>A mia Madre ed a mia Moglie,</strong>[1]</big></big></center></h3><br><br>
 
 <p><big><big><center>AMOROSISSIME ED ASSENNATE DONNE,</center></big></big></p><br><br><br>
 
 
 <p><big><i>io buon diavolaccio di figliuolo e di marito dedico le presenti favole, che scrissi, scelsi e ripulii all’età di 40 anni per fugare dalla mente i pensieri uggiosi, e per occupare i brevi intervalli di riposo che mi rimangono tra l’affaticarmi colla mia sdruscita barchetta in mezzo al mare agitato della vita ed il guardarmi dai pesci-cani, i quali con sorpresa non m’ingoino piacevolmente prima del mio tempo; che così non sia!</i></big></p>
 
-<p class="index-20"><big>Il M. di S.</big></p><br><br>
+<p class="index-p20"><big>Il M. di S.</big></p><br><br>
+
+<p><big>[1] Nell’originale, la virgola non è presente.</big></p><br><br>
 
 
 
