--- a/dedica.html
+++ b/dedica.html
@@ -28,7 +28,7 @@
 </header>
 <section>
 <p><big><strong><a href="Favoleggiatore.html">Indice</a></big></big></strong></center></p><br><br>
-<h3><center><big><big><strong>A mia Madre ed a mia Moglie,</strong>[1]</big></big></center></h3><br><br>
+<h3><center><big><strong>A mia Madre ed a mia Moglie</strong></big>[1]</center></h3><br><br>
 
 <p><big><big><center>AMOROSISSIME ED ASSENNATE DONNE,</center></big></big></p><br><br><br>
 
