--- a/Favoleggiatore.html
+++ b/Favoleggiatore.html
@@ -35,7 +35,7 @@
 
 <p><big><a href="dedica.html">DEDICA</a></big></p><br><br><br>
 
- <p><big><a href="dedica.html">PREFAZIONE</a></big></p><br><br><br>
+ <p><big><a href="Prefazione.html">PREFAZIONE</a></big></p><br><br><br>
     
 <table class="table-2">
  <tr>
