--- a/Plessi2.html
+++ b/Plessi2.html
@@ -39,10 +39,12 @@ Sappiamo, comunque, alcune cose con certezza. Tra le più significative, vanno m
 <img src="img/celebri vignolesi/Plessi Alessandro/palazzo.jpg" width="680" height="520"><br><br><br>
 <p><big>Nella prima immagine, il frontespizio di <i>Consulti medici. Con l’aggiunta di alcune lettere del dottor Morando Morando</i> [in realtà: <i>Morando Morandi</i>] […], In Venezia, Presso Giambatista Pasquali, 1759; fu Giuseppe Antonio Plessi a raccogliere questi «consulti medici» di Morando Morandi (1693-1756) e a curarne l’edizione nel presente libro. Nella seconda immagine, l’<i>incipit</i> della dedicatoria in versi, dal titolo <i>A Sua Eccellenza il signor don Antonio Boncompagni Ludovisi</i> […], scritta da Plessi e collocata alle pp. 3-8 del suddetto volume (si segnala che, alle pp. 7-8, alcuni versi e una nota a piè di pagina sono dedicati a Vignola e, soprattutto, ai suoi illustri figli <strong>Giacomo Barozzi</strong> [1507-1573] e <strong>Lodovico Antonio Muratori</strong> [1672-1750]). Fonte: google.com</big></p><br>
 <center><img src="img/celebri vignolesi/Plessi Giuseppe Antonio/frontespizio.jpg" width="420" height="630"></center><br><br>
-<img src="img/celebri vignolesi/Plessi Giuseppe Antonio/incipit.jpg" width="420" height="630"><br><br>
+<img src="img/celebri vignolesi/Plessi Giuseppe Antonio/incipit.jpg" width="420" height="630"><br><br>													
+<p><big>Frontespizio del libro <i>Riflessioni del Dottore Giuseppe Plessi intorno al Saggio sopra l’Inutilità dell’Inoculazione del Vajuolo<br> del Signor Dottore Giuseppe Ramazzini di Modona</i>, In Bologna, Nella Stamperìa di S. Tommaso d’Aquino, 1767. Fonte: google.com</big></p><br>
+<center><img src="img/celebri vignolesi/Plessi Giuseppe Antonio/vaiolo.jpg" width="420" height="630"></center><br><br>	
 <p><strong><big><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
