--- a/Barozzi.html
+++ b/Barozzi.html
@@ -103,7 +103,7 @@ Questo volume è il risultato della ricerca preparatoria per la mostra <i>Jacopo
 <center><img src="img/celebri vignolesi/Barozzi/targa.JPG" width="800" height="440"></center><br><br>
 
 <p><big>Villa Giulia si trova a Roma, alle pendici dei Monti Parioli, non lontano dalla Via Flaminia; oggi una sua porzione accoglie il Museo Nazionale Etrusco. Nel 1550, salito da pochi mesi al soglio pontificio, Giulio III incaricò Barozzi della progettazione del nuovo complesso architettonico. <i>Il Vignola</i> stese fin dall’inverno 1550-1551 i primi disegni, nell’approntare i quali egli dovette tener conto di una preesistenza anteriore al 1527 e commissionata dal cardinale Antonio Maria Ciocchi del Monte (1461-1533), zio del papa regnante dal 1550, a Jacopo Sansovino (1486-1570). Furono coinvolti nella progettazione di Villa Giulia anche Giorgio Vasari (1511-1574) e Bartolomeo Ammannati (1511-1592). Nel novembre 1553 il complesso architettonico era in gran parte completato; a quella data, risultava altresì conclusa la decorazione pittorica interna, eseguita da Pietro Venale (<i>fl</i>. 1541-1583), Prospero Fontana (1512-1597) e Taddeo Zuccari (1529-1566). Nell’ambito di Villa Giulia, sono da attribuire al <i>Vignola</i> almeno la palazzina d’ingresso con la corte semicircolare e l’impianto del ninfeo sotterraneo. Nel medesimo periodo in cui era aperto il cantiere di quel complesso architettonico, a poche centinaia di metri da lì si stava costruendo la piccola chiesa di Sant’Andrea in Via Flaminia su progetto di Barozzi. Fonte dell’immagine recente della facciata di Villa Giulia: google.com</big></p><br>
-<img src="img/celebri vignolesi/Barozzi/facciata PRIMA.jpg" width="700" height="520"><br><br><br>	
+<img src="img/celebri vignolesi/Barozzi/Facciata PRIMA.jpg" width="700" height="520"><br><br><br>	
 
 <p><big><big><center>Facciata del Palazzo Farnese a Caprarola (VT). Il cantiere dell’edificio fu inaugurato nel 1520<br> su progetto di Antonio da Sangallo <i>il Giovane</i> (1484-1546) e di Baldassarre Peruzzi (1481-1536).<br> Nel 1557 vennero commissionati al <i>Vignola</i> nuovi disegni per il palazzo<br> e nel 1559, sotto la sua direzione, riprese la fabbrica; egli lasciò l’incarico dopo un lustro.<br> Nel 1575 la struttura architettonica fu completata nelle sue parti essenziali. Fonte: google.com</center></big></big></p><br>
 <img src="img/celebri vignolesi/Barozzi/facciata.jpg" width="900" height="600"><br><br><br>
@@ -144,7 +144,7 @@ Questo volume è il risultato della ricerca preparatoria per la mostra <i>Jacopo
 
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></big></p>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
