--- a/Redorici Roffi.html
+++ b/Redorici Roffi.html
@@ -83,7 +83,7 @@ Augusta Redorici Roffi, <i>C’era una volta l’Impresa</i>, a cura di Maria Gr
 
 <p><center><big>La tomba della Redorici Roffi e del marito.</big></center><br>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/tomba Augusta.jpg" width="480" height="680"><br><br>
-<p><center><big>In una fotografia del 2022, due storiche “colonne” del Museo Civico di Vignola,<br> a lungo strette collaboratrici della Redorici Roffi: a sinistra, Angela Giansante (1945-2023); a destra, Maria Pia Corsini.</center></big></p>
+<p><center><big>In una fotografia del 2022, due storiche “colonne” del Museo Civico di Vignola, a lungo strette collaboratrici<br> della Redorici Roffi: a sinistra, Angela Giansante (1945-2023); a destra, Maria Pia Corsini.</center></big></p>
 <img src="img/celebri vignolesi/Redorici Roffi Augusta/ringraziamento.jpg" width="500" height="700"><br><br>
 
 <p><center><big>La locandina dell’evento pubblico del 15 dicembre 2022 per ricordare la Redorici Roffi<br> presso il Museo Civico di Vignola a lei intitolato.</big></center></p>
@@ -91,7 +91,7 @@ Augusta Redorici Roffi, <i>C’era una volta l’Impresa</i>, a cura di Maria Gr
 
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
