--- a/novembre.html
+++ b/novembre.html
@@ -39,7 +39,7 @@ Durante il suo effimero soggiorno in paese, Garibaldi arringò la folla da una f
 Nell’immagine sottostante, il busto di Garibaldi a Vignola (risulta collocato lungo la strada che oggi porta il suo nome). Quest’opera, dell’artista savignanese Giuseppe Graziosi (1879-1942), fu inaugurata con una solenne cerimonia il 10 settembre 1905. La scultura è posta sopra una mensola davanti all’epigrafe marmorea murata il 16 aprile 1882 sullo stesso palazzo, omaggio che Vignola tributò a Garibaldi – un mese e mezzo prima che egli spirasse – per ricordarne la visita.</p><br><br>
 <img src="img/FOTO VARIE/busto.jpg" width="650" height="600"><br><br><br><br><br><br>
                                                                               
-<p><strong>8 novembre 1109</strong> (calendario giuliano): <strong>MATILDE DI CANOSSA</strong> soggiornò nel <i>castrum vignolese</i>, all’epoca sottoposto all’autorità del vescovo di Modena.<br><br> 
+<p><strong>8 novembre 1109</strong> (calendario giuliano): <strong>MATILDE DI CANOSSA</strong> soggiornò nel <i>castrum</i> vignolese, all’epoca sottoposto all’autorità del vescovo di Modena.<br><br> 
 
 Riguardo a questa visita della celebre nobildonna, scrisse il giovane <strong>Francesco Selmi</strong> (1817-1881): «Nel 1009 [<i>recte</i>: 1109] a dì 8 novembre, la contessa Matilde trovossi a Vignola a fine di comporre una lite insorta fra l’abate di Nonantola e l’arciprete della Pieve di Nonantola stessa. Ed è per questo castello non poco vanto l’avere ricevuta nelle proprie mura quella donna maravigliosa e santa, il cui amore alla Chiesa ed alla rettitudine staranno perpetuamente di esempio a noi ed ai posteri: donna di petto gagliardo, di cuore generoso, di mente vastissima, e che offre a noi un modello di quella magnanimità, di quella possanza e di quella intrepidezza, delle quali erano capaci gli uomini d’una età chiamata barbara, e forse migliore in alcuni lati della nostra perché era meno molle e più religiosa» (F. Selmi, <i>Cenni storici intorno a Vignola</i>, «Museo Scientifico, Letterario ed Artistico», a. II [1840], n. 17 [25 aprile], pp. 133-134, e n. 25 [20 giugno], pp. 199-200: 134).<br><br>
 Nell’immagine qui sotto, Gian Lorenzo Bernini e aiuti, <i>Monumento a Matilde di Canossa</i> (1634-1637), Città del Vaticano, basilica di San Pietro. Fonte: google.com</big></p><br>
@@ -78,7 +78,7 @@ Il nostro personaggio intrattenne buoni rapporti non solo con illustri letterati
  
  <p><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
  </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
