--- a/giugno.html
+++ b/giugno.html
@@ -108,9 +108,9 @@ Nell’immagine qui sotto, la tomba di Ugo Roli e quella di alcuni suoi familiar
 <p><strong><big><center>Vuoi saperne di più su Ugo Roli?<br>Allora, visita il suo <a href="Roli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
 
 <p><big><strong>29 giugno 1822</strong>: morì a Modena <strong>PIETRO MINGHELLI</strong>, uno dei pittori-decoratori emiliani più ammirati della sua epoca.<br><br>
-Nato l’11 gennaio 1780 a Vignola da una famiglia di contadini, Pietro Minghelli fu professore di Paesaggio e Ornato presso l’Accademia di Belle Arti di Modena, diretta da <strong>Giuseppe Maria Soli</strong> (1747-1822). Questi, pure lui di Vignola e di umili origini, considerò sempre il nostro personaggio uno dei suoi migliori allievi.<br>  
+Nato l’11 gennaio 1780 a Vignola in una famiglia di contadini, Pietro Minghelli fu professore di Paesaggio e Ornato presso l’Accademia di Belle Arti di Modena, diretta da <strong>Giuseppe Maria Soli</strong> (1747-1822). Questi, pure lui di Vignola e di umili origini, considerò sempre il nostro personaggio uno dei suoi migliori allievi.<br>  
 Minghelli affiancò al mestiere di insegnante la libera professione di pittore-decoratore, nella quale cominciò ben presto a farsi apprezzare come artista valente e rapido nell’esecuzione (lo stesso Soli, nell’ambito dei cantieri architettonici affidatigli, ebbe a giovarsi spesso dell’opera del conterraneo per l’ornamento delle pareti interne degli edifici). Inoltre, egli fu autore di quadri (su tela) e curatore di allestimenti scenografici.<br>  
-Tra le più significative testimonianze della sua operosa ma purtroppo breve carriera artistica, se ne possono annoverare due nella città natale: i decori parietali della dimora del nobiluomo Giuseppe Galvani (1781-1817), risalenti al 1810-1815, e quelli della Villa Bellucci (in seguito, Tosi Bellucci, dal 1916 Residenza Municipale), realizzati tra il 1820 e il 1822.</p>
+Tra le più significative testimonianze della sua operosa ma purtroppo breve carriera artistica, se ne possono annoverare due nella città natale: i decori parietali della dimora del nobiluomo Giuseppe Galvani (1781-1817), risalenti al 1810-1815, e quelli della Villa Bellucci (poi Tosi Bellucci, dal 1916 Residenza Municipale), realizzati tra il 1820 e il 1822.</p>
 <p>Nell’immagine sottostante, lapide funeraria di Pietro Minghelli collocata nel cimitero di Vignola.</big></p><br>
 <img src="img/celebri vignolesi/Minghelli/tomba.jpg" width="800" height="450"><br><br>
 <p><strong><big><center>Vuoi saperne di più su Pietro Minghelli?<br>Allora, visita il suo <a href="Minghelli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
@@ -142,7 +142,7 @@ Nelle immagini sottostanti, la casa natale di Pietro Antonio Bernardoni e la lap
 <p><big><strong><center>Vuoi saperne di più su Pietro Antonio Bernardoni?<br>Allora, visita il suo <a href="Bernardoni.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong></p><br><br><br>
 <p><strong><a href="Anniversari.html">Indice dei mesi</a></strong></center></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail:<a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
