--- a/dicembre.html
+++ b/dicembre.html
@@ -60,7 +60,12 @@ Nell’immagine sottostante, Mario Pellegrini in divisa. Fonte: Massimo Bazzani 
 
 Nato a Spilamberto (in località Confine) l’8 luglio 1898 in una famiglia di esigue possibilità economiche, Ivo Soli crebbe nella vicina Vignola, dove fu anche per diverso tempo apprendista di un fabbro maniscalco. Grazie a un sussidio del Comune di Vignola e all’intervento di un munifico privato, egli poté frequentare, a Modena, il Regio Istituto di Belle Arti. Conseguitavi nel 1921 la licenza del corso speciale di Scultura, il nostro personaggio passò a Milano, città che lo vide diventare in poco tempo non solo uno degli scultori italiani più interessanti della nuova generazione, ma pure – all’inizio degli anni Trenta – professore di Plastica e Composizione alla Scuola Superiore degli Artefici presso l’Accademia di Belle Arti di Brera.<br>
 
-L’artista modenese partecipò a innumerevoli mostre, rassegne ed esposizioni allestite nel nostro Paese e all’estero, meritando parecchi premi e riconoscimenti. Sue sculture sono conservate in diverse città italiane (inclusa Vignola).</big></p><br><br>
+L’artista modenese partecipò a innumerevoli mostre, rassegne ed esposizioni allestite nel nostro Paese e all’estero, meritando parecchi premi e riconoscimenti. Sue sculture sono conservate in diverse città italiane (inclusa Vignola).<br>
+Soli ebbe anche una carriera di un certo rilievo, sebbene non molto nota, nell’ambito della pittura: di grande qualità, in special modo, risultano i suoi ritratti.<br> 
+Il nostro personaggio dimorò a Milano per mezzo secolo, ma durante quel periodo fece più volte ritorno a Vignola. In questa cittadina, alla quale rimase sempre legatissimo e dove vivevano parenti e vecchi amici, egli decise di prendere la residenza al principio degli anni Settanta; fino alla morte, continuò a scolpire e modellare nel suo laboratorio di Castelvecchio, in pieno centro storico.<br><br> 
+Nell’immagine qui sotto, una delle opere più conosciute di Soli: si tratta del monumento a Carlo Porta (1966), bronzo; Milano, Verziere.</big></p><br><br>
+<img src="img/celebri vignolesi/Soli Ivo/monumento.jpg" width="430" height="600"><br><br> 
+<p><strong><big><big><center>Vuoi saperne di più su Ivo Soli? <br>Allora, visita il suo <a href="Soli2.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>  </big></p><br><br>
   
   
 <p><big><strong>11 dicembre 1889</strong>: nacque a Vignola <strong>AMLETO DEGLI ESPOSTI</strong>, ufficiale dell’Aeronautica Militare del Regno d’Italia, eroico aviatore durante la Prima Guerra Mondiale e istruttore di volo.<br><br> 
@@ -85,7 +90,7 @@ Il nostro personaggio si spense nella città natale il 29 giugno 1964. Venne sep
 
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
