--- a/amleto.html
+++ b/amleto.html
@@ -50,14 +50,14 @@ A Vignola è presente una via intitolata ad Amleto Degli Esposti.</big></p><br><
 <p><big><big><center>Fotografia che ritrae Degli Esposti in divisa da sottotenente degli Specialisti del Genio (1918).<br> Fonte: Massimo Bazzani - Carlo Alberto Cavazzoni - Giampaolo Grandi - Gianluca Sandoni,<br> <i>Amleto e Aristide Degli Esposti eroici aviatori, vignolesi</i>,<br>  Gruppo di Documentazione Vignolese “Mezaluna - Mario Menabue”,<br> Savignano sul Panaro (MO), Tipolitografia F.G., 2010, p. 62; dall’Archivio Famiglia Degli Esposti.</center></big></big></p>
 <img src="img/celebri vignolesi/Degli Esposti Amleto/foto1.jpg" width="470" height="608"></p><br>
 <p><big><big><center>Fotografia che ritrae Degli Esposti con altri piloti e mitraglieri della Squadriglia <i>Aerei da caccia</i> (1917).<br> Fonte: Massimo Bazzani - Carlo Alberto Cavazzoni - Giampaolo Grandi - Gianluca Sandoni,<br> <i>Amleto e Aristide Degli Esposti eroici aviatori, vignolesi,</i> cit., p. 70; dall’Archivio Famiglia Degli Esposti.</center></big></big></p>
-<img src="img/celebri vignolesi/Degli Esposti Amleto/amici.jpg" width="600" height="380"></p><br>
+<img src="img/celebri vignolesi/Degli Esposti Amleto/amici.JPG" width="600" height="380"></p><br>
 <p><big><big><center>Fotografia che ritrae Amleto Degli Esposti e il figlioletto Aristide nella loro casa di Bologna (1922 o 1923).<br> Fonte: Massimo Bazzani - Carlo Alberto Cavazzoni - Giampaolo Grandi - Gianluca Sandoni,<br> <i>Amleto e Aristide Degli Esposti eroici aviatori, vignolesi</i>, cit., p. 6<br> (in formato ridotto, anche p. 74); dall’Archivio Famiglia Degli Esposti. </center></big></big></p>
 <img src="img/celebri vignolesi/Degli Esposti Amleto/aristide.jpg" width="500" height="680"><br><br>
 <p><big><big><center>Fotografia recente del monumento funebre di Amleto Degli Esposti nel cimitero di Vignola.</center></big></big></p>
 <img src="img/celebri vignolesi/Degli Esposti Amleto/monumento.jpg" width="500" height="700"><br><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></big></center></p><br><br><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
