--- a/Tosi.html
+++ b/Tosi.html
@@ -32,7 +32,7 @@
 <big>(1811-1876)</big></center></h3><br><br><br>
 <h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 <p><big><strong>LUCA ANTONIO</strong> – talvolta, denominato semplicemente <strong>Luca</strong> – <strong>TOSI</strong>,  medico, amministratore locale, letterato, studioso e patriota, nacque a Vignola il 27 (o 28) ottobre 1811.<br>
-Questo personaggio era il primogenito di Barlamo juniore (1785-1816), stimato medico condotto del paese ed erede di possedimenti nel Ferrarese (alcuni di essi, ora si trovano nella città metropolitana di Rovigo, e proprio in quella zona, nel paese di Crespino, il suddetto Barlamo era venuto alla luce) e nel Modenese (a Camposanto, a Savignano sul Panaro, a Spilamberto e a Vignola), e di Angelica Maria Bellucci (1784-1876), appartenente a una delle famiglie più cospicue di Vignola.<br>
+Questo personaggio era il primogenito di Barlamo juniore (1785-1816), stimato medico condotto del paese ed erede di possedimenti nel Ferrarese (alcuni di essi, ora si trovano nella Città Metropolitana di Rovigo, e proprio in quella zona, nel paese di Crespino, il suddetto Barlamo era venuto alla luce) e nel Modenese (a Camposanto, a Savignano sul Panaro, a Spilamberto e a Vignola), e di Angelica Maria Bellucci (1784-1876), appartenente a una delle famiglie più cospicue di Vignola.<br>
 Di idee liberali, Tosi manifestò subito una ferma avversione nei confronti del regime austroestense e non esitò a offrire il suo aiuto dapprima per giungere all’unificazione nazionale sotto Casa Savoia e in seguito per consolidare il nuovo Regno e “fare gli Italiani”, diventando in questo modo un’insigne figura del Risorgimento a Vignola e nei dintorni.<br>  
 
 Il nostro personaggio si laureò in Medicina il 30 luglio 1837 all’Università di Modena, per poi perfezionarsi a Firenze presso l’Ospedale di Santa Maria Nuova sotto la guida del celebre Maurizio Bufalini (1787-1875). Questi gli chiese di diventare suo «aggiunto», ma Tosi preferì far ritorno al suo paese natale, dove iniziò a praticarvi con zelo e generosità la professione di medico (non senza una particolare attenzione per i poveri), e il 3 aprile 1841 contrasse matrimonio con Maria Luigia Lolli (1815-1861), di famiglia benestante, donna dalla quale ebbe il figlio Giacomo (1843-1911) e le tre figlie Diamante, Angelica (1847-1932) e Isabella (1849-1917).<br>  
@@ -54,7 +54,7 @@ Malato di cuore da tempo, il nostro personaggio spirò il 2 dicembre 1876 nella 
 <center><img src="img/celebri vignolesi/Tosi/Tomba.jpg" width="550" height="600"></center><br><br>
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></center></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
