--- a/Neri2.html
+++ b/Neri2.html
@@ -66,7 +66,7 @@ A Nèttore Neri sono attualmente intitolate la Biblioteca Comunale di Barbiano e
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 
-<p><big><big><center>Un'immagine di Neri nella prima maturità; il berrettino che egli indossa si chiama, in dialetto romagnolo, «galòza» (o «calòta»).<br> Alcuni anni dopo essere stata scattata, questa fotografia venne inserita (fuori testo)<br> in <i>Blightrìgh e Smaréj (Canted)</i>, raccolta sulla quale vedi poco oltre.</center></big></big></p>
+<p><big><big><center>Neri nella prima maturità; il berrettino che qui egli indossa si chiama, in dialetto romagnolo, «galòza» (o «calòta»).<br> Alcuni anni dopo essere stata scattata, questa fotografia venne inserita (fuori testo)<br> in <i>Blightrìgh e Smaréj (Canted)</i>, raccolta sulla quale vedi poco oltre.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri2/nettore.jpg" width="500" height="665"></center><br><br>
 	
 <p><big><big><center>Neri al suo arrivo a Vignola come pretore, accolto dalle massime autorità del paese (1924).<br> Il nostro personaggio è al centro e tiene per mano il figlioletto <strong>Attilio</strong>.<br> L’autore dello scatto fu il rinomato fotografo modenese Umberto Orlandini (1879-1931).<br>
@@ -76,8 +76,8 @@ A Nèttore Neri sono attualmente intitolate la Biblioteca Comunale di Barbiano e
 <p><big><big><center>Ritratto fotografico di Neri proveniente da <i>Arsoj. Biöjch rumagnoli cun dò parol d’Spaldo</i><br> [Rimasuglio. Bioccoli romagnoli con due parole di Spaldo], Vignòla, Stamparéja A. Monti d’E. Fabbri, 1939;<br> è una tavola fuori testo, collocata subito prima di un breve scritto senza titolo di Aldo Spallicci,<br> da considerarsi l’introduzione all’opera (pp. [I]-III). «Spaldo» era un soprannome dello stesso Spallicci.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri2/ritratto.jpg" width="400" height="665"></center><br><br>
 
-<p><big><big><center>Prima di copertina di <i>Blightrìgh e smaréj (Canted)</i> [Cose di poco conto e sciocchezze (Cantate)], Lugh, Stampareja di Ferretti, 1932.<br>
-Il volumetto contiene una raccolta di versi di Neri, una premessa di Aldo Spallicci<br> e illustrazioni dell’imolese Tommaso Della Volpe (1883-1964) e del modenese Ferdinando Cavicchioli (1863-1941).<br> Si tratta del primo libro pubblicato dal nostro autore ed è l’unico, tra i suoi, a essere stato posto in vendita.</center></big></big></p>
+<p><big><big><center>Prima di copertina di <i>Blightrìgh e Smaréj (Canted)</i> [Cose di poco conto e sciocchezze (Cantate)],<br> Lugh, Stampareja di Ferretti, 1932.<br>
+Il volumetto contiene una raccolta di versi di Neri, una premessa di Aldo Spallicci<br> e illustrazioni e illustrazioni sia del modenese Ferdinando Cavicchioli (1863-1941) sia dell’imolese Tommaso Della Volpe (1883-1964).<br> Si tratta del primo libro pubblicato dal nostro autore ed è l’unico, tra i suoi, a essere stato posto in vendita.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri2/sciocchezze.jpg" width="480" height="665"></center><br><br>
 
 <p><big><big><center>Prima di copertina di <i>Blén e schlén (Canted)</i> [Frammenti e schegge di legno (Cantate)],<br> Lugh, Stamparèja di Ferretti, 1934 (una edizione) e 1935 (due edizioni).<br> È presente un proemio di A.B. [Antonio Baldini?]. Libro decorato dal pittore cotignolese Luigi Varoli. Fonte: google.com</center></big></big></p>
@@ -96,7 +96,7 @@ Il volumetto contiene una raccolta di versi di Neri, una premessa di Aldo Spalli
 
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
