--- a/Neri2.html
+++ b/Neri2.html
@@ -77,7 +77,7 @@ A Nèttore Neri sono attualmente intitolate la Biblioteca Comunale di Barbiano e
 <center><img src="img/celebri vignolesi/Neri2/ritratto.jpg" width="400" height="665"></center><br><br>
 
 <p><big><big><center>Prima di copertina di <i>Blightrìgh e Smaréj (Canted)</i> [Cose di poco conto e sciocchezze (Cantate)],<br> Lugh, Stampareja di Ferretti, 1932.<br>
-Il volumetto contiene una raccolta di versi di Neri, una premessa di Aldo Spallicci<br> e illustrazioni e illustrazioni sia del modenese Ferdinando Cavicchioli (1863-1941) sia dell’imolese Tommaso Della Volpe (1883-1964).<br> Si tratta del primo libro pubblicato dal nostro autore ed è l’unico, tra i suoi, a essere stato posto in vendita.</center></big></big></p>
+Il volumetto contiene una raccolta di versi di Neri, una premessa di Aldo Spallicci<br> e illustrazioni sia del modenese Ferdinando Cavicchioli (1863-1941) sia dell’imolese Tommaso Della Volpe (1883-1964).<br> Si tratta del primo libro pubblicato dal nostro autore ed è l’unico, tra i suoi, a essere stato posto in vendita.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri2/sciocchezze.jpg" width="480" height="665"></center><br><br>
 
 <p><big><big><center>Prima di copertina di <i>Blén e schlén (Canted)</i> [Frammenti e schegge di legno (Cantate)],<br> Lugh, Stamparèja di Ferretti, 1934 (una edizione) e 1935 (due edizioni).<br> È presente un proemio di A.B. [Antonio Baldini?]. Libro decorato dal pittore cotignolese Luigi Varoli. Fonte: google.com</center></big></big></p>
