--- a/Gazzotti.html
+++ b/Gazzotti.html
@@ -39,6 +39,10 @@
 	<p><big><strong>ALBERTINI, Pierluigi (testo)</strong> - <strong>POPOLI, Tiziano (note critiche)</strong>: <strong><i>Luigi Gazzotti. 1886-1923. I Centenario della nascita</i></strong>, s.l. [ma: Vignola (MO)], s.n. [ma: Comune di Vignola, Centro Stampa del Comune], 1986.</big></p><br><br><br> 
 	
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br><br>
+	
+<p><big><big><center>Fotografia che ritrae Gazzotti intorno ai diciotto anni. Fonte: google.com</center></big></big></p>
+<img src="img/celebri vignolesi/Gazzotti/gazzottidiciottenne.jpg"></p><br>
+	
 <p><big><big><center>Fotografia che ritrae Gazzotti intorno ai vent’anni. Fonte: google.com</center></big></big></p>
 <img src="img/celebri vignolesi/Gazzotti/ventanni.jpg"></p><br>
 
@@ -58,7 +62,7 @@
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
