--- a/Neri2.html
+++ b/Neri2.html
@@ -76,11 +76,11 @@ A Nèttore Neri sono attualmente intitolate la Biblioteca Comunale di Barbiano e
 <p><big><big><center>Ritratto fotografico di Neri proveniente da <i>Arsoj. Biöjch rumagnoli cun dò parol d’Spaldo</i><br> [Rimasuglio. Bioccoli romagnoli con due parole di Spaldo], Vignòla, Stamparéja A. Monti d’E. Fabbri, 1939;<br> è una tavola fuori testo, collocata subito prima di un breve scritto senza titolo di Aldo Spallicci,<br> da considerarsi l’introduzione all’opera (pp. [I]-III). «Spaldo» era un soprannome dello stesso Spallicci.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri2/ritratto.jpg" width="400" height="665"></center><br><br>
 
-<p><big><big><center>Prima di copertina di <i>Blightrìgh e Smaréj (Canted)</i> [Cose di poco conto e sciocchezze (Cantate)],<br> Lugh, Stampareja di Ferretti, 1932.<br>
+<p><big><big><center>Prima di copertina di <i>Blightrìgh e Smaréj (Canted)</i> [Cose di poco conto e sciocchezze (Cantate)],<br> Lugh, Stampareja di Ferretti, 1932.
 Il volumetto contiene una raccolta di versi di Neri, una premessa di Aldo Spallicci<br> e illustrazioni sia del modenese Ferdinando Cavicchioli (1863-1941) sia dell’imolese Tommaso Della Volpe (1883-1964).<br> Si tratta del primo libro pubblicato dal nostro autore ed è l’unico, tra i suoi, a essere stato posto in vendita.</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri2/sciocchezze.jpg" width="480" height="665"></center><br><br>
 
-<p><big><big><center>Prima di copertina di <i>Blén e schlén (Canted)</i> [Frammenti e schegge di legno (Cantate)],<br> Lugh, Stamparèja di Ferretti, 1934 (una edizione) e 1935 (due edizioni).<br> È presente un proemio di A.B. [Antonio Baldini?]. Libro decorato dal pittore cotignolese Luigi Varoli. Fonte: google.com</center></big></big></p>
+<p><big><big><center>Prima di copertina di <i>Blén e schlén (Canted)</i> [Frammenti e schegge di legno (Cantate)],<br> Lugh, Stamparèja di Ferretti, 1934 (una edizione) e 1935 (due edizioni). È presente un proemio di A.B. [Antonio Baldini?].<br> Libro decorato dal pittore cotignolese Luigi Varoli. Fonte: google.com</center></big></big></p>
 <center><img src="img/celebri vignolesi/Neri2/frammenti.jpg" width="450" height="665"></center><br><br>
 
 <p><big><big><center>Prima di copertina di <i>Ruscàja. Cun introduzion d’Antonio Baldini</i> [Spazzatura. Con introduzione di Antonio Baldini],<br> Vignola, Stamparèja A. Monti d’E. Fabbri, 1937. Fonte: google.com</center></big></big></p>
