--- a/Muratori.html
+++ b/Muratori.html
@@ -32,6 +32,66 @@
 <h3><center><big><big>LODOVICO ANTONIO MURATORI</big></big><br><br>
 	<big>(1672-1750)</big></center></h3><br><br><br>
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br><br>
+
+<h5><big><big><big><big><strong><center>ALCUNE DELLE OPERE MURATORIANE PIÙ IMPORTANTI</center></strong></big></big></big></big></big></h5><br><br>
+
+<p><big><strong><i>Anecdota, quæ ex Ambrosianæ Bibliothecæ Codicibus Nunc primum eruit, Notis, ac Disquisitionibus</i></strong> [così, i primi due volumi; gli altri due, solo <i>Anecdota, quæ ex Ambrosianæ Bibliothecæ Codicibus Nunc primum eruit auget Ludovicus Antonius Muratorius</i>], 4 voll., Mediolani, Typis Iosephi Pandulfi Malatestae (voll. I-II) / Patavii, Typis Seminarii apud Joannem Manfré (voll. III-IV), 1697-1698 (voll. I-II) / 1713 (voll. III-IV): raccolta di testi inediti in lingua latina trascritti da codici conservati alla Biblioteca Ambrosiana di Milano; è presente anche l’annotazione in latino di Muratori.</big></p>
+
+<p><big><strong><i>I primi disegni della Repubblica letteraria d’Italia rubati al segreto, e donati alla curiosità de gli altri eruditi da Lamindo Pritanio</i></strong> [pseudonimo di Lodovico Antonio Muratori], In Napoli [ma: Venezia], s.n., 1703: per favorire la nascita di una vera e propria «Repubblica letteraria» tra le persone di cultura attive in Italia e così, anche, contribuire a far tornare pienamente protagonista la cultura e la lingua italiane sulla scena internazionale.</big></p>
+
+<p><big><strong><i>Della perfetta poesia italiana, spiegata, e dimostrata con varie osservazioni</i></strong>, 2 voll., In Modena, Nella stampa di Bartolomeo Soliani, 1706: sull’arte poetica e sulla lingua a essa adatta.</big></p>
+
+<p><big><strong><i>Introduzione alle paci private</i></strong>, In Modena, Per Bartolomeo Soliani Stamp. Ducale, 1708: libro finalizzato a risolvere controversie tra individui senza ricorrere alla pratica del duello.</big></p>
+
+<p><big><strong><i>Riflessioni sopra il buon gusto intorno le scienze e le arti</i></strong>, Venezia, Per Luigi Pavino, 1708: testo di tema prevalentemente estetico dal quale emergono un vivo spirito nazionale, la coscienza delle debolezze dell’Italia e la necessità di unificare la cultura per rivolgerla al solo obiettivo nobile, che è non l’onore, ma il bene comune.</big></p>
+
+<p><big><strong><i>Anecdota Græca quæ ex Mss. Codicibus Nunc primum eruit, Latio donat, Notis, & Disquisitionibus auget Ludovicus Antonius Muratorius</i></strong>, Patavii, Typis Seminarii, Apud Joannem Manfré, 1709: raccolta di testi inediti in lingua greca trascritti da codici conservati alla Biblioteca Ambrosiana di Milano; sono presenti anche la traduzione e l’annotazione, entrambe in latino e di Muratori.</big></p>
+
+<p><big><strong><i>Piena esposizione de i diritti imperiali ed estensi sopra la città di Comacchio, in risposta alle due difese del Dominio e alla Dissertazione istorica, s’aggiunge una tavola cronologia, con un’appendice d’investiture cesaree, e d’altri documenti spettanti alla controversia di Comacchio</i></strong>, s.l., s.n., 1712: è la pubblicazione libraria più ampia dedicata da Muratori in quegli anni alla “questione di Comacchio”.</big></p>
+
+<p><big><strong><i>Del governo della peste, e delle maniere di guardarsene</i></strong>, In Modena, Per Bartolomeo Soliani stampatore ducale, 1714: dedicato alla natura della peste, alle maniere di contagio e a come affrontare le epidemie.</big></p>
+
+<p><big><strong><i>De ingeniorum moderatione in religionis negotio</i></strong>, Lutetiae Parisiorum, Apud Carolum Robustel, via Iacobaea, ad insigne arboris palmae, 1714: si mette in guardia contro gli eccessi del culto dovuti a uno squilibrio tra fede e ragione.</big></p>
+
+<p><big><strong><i>Delle antichità estensi ed italiane</i></strong>, In Modena, Nella Stamperia Ducale, 1717, e <strong>Delle antichità estensi. Continuazione, o sia Parte seconda</strong>, In Modena, Nella Stamperia Ducale, 1740: opera dedicata alla storia della dinastia estense.</big></p>
+
+<p><big><i><strong>Della Carità Cristiana, in quanto essa è amore del prossimo. Trattato morale</i></strong>, In Modena, Per Bartolomeo Soliani stampatore ducale, 1723: sulla virtù teologale della carità, anche in rapporto alle altre virtù (sia teologali sia cardinali), e soprattutto sulla pratica della carità nella vita quotidiana (alla luce dell’esperienza delle missioni gesuitiche e dell’esperienza parrocchiale di Muratori).</big></p>
+
+<p><big><strong><i>Rerum Italicarum Scriptores ab anno aerae Christianae quingentesimo ad millesimumquingentesimum</i></strong>, 26 voll. [i primi due volumi sono entrambi divisi in due tomi], Mediolani, Ex typographia Societatis Palatinae in Regia Curia, 1723-1738: prima grande raccolta di fonti medievali della storiografia moderna.</big></p>
+
+<p><big><strong><i>Filosofia morale esposta e proposta a i giovani</i></strong>, In Verona, Nella stamperia di Angelo Targa, 1735: disamina sulla filosofia morale che non si allontana dall’insegnamento cristiano tradizionale, ma che desidera confrontarsi con le concezioni di filosofi europei di varie tendenze vissuti in epoca moderna.</big></p>
+
+<p><big><strong><i>Antiquitates Italicae Medii Aevi</i></strong>, 6 voll., Mediolani, Ex typographia Societatis Palatinae in Regia Curia, 1738-1742 [ne esiste una traduzione in italiano eseguita dallo stesso Muratori e dal nipote Giovanni Francesco Soli Muratori {1701-1769}, stampata postuma a cura di quest’ultimo: <i>Dissertazioni sopra le antichità italiane</i>, 3 voll., In Milano {ma: Venezia}, A spese di Giambatista Pasquali, 1751]: dissertazioni su diritto, costumi, istituzioni, economia, religione e letteratura nel millennio medievale in Italia.</big></p>
+
+<p><big><strong><i>Dei difetti della giurisprudenza</i></strong>, In Venezia, Presso Giambatista Pasquali, 1742: vi si auspica una semplificata e ragionevole codificazione delle leggi.</big></p>
+
+<p><big><strong><i>Il cristianesimo felice nelle missioni de’ padri della Compagnia di Gesù nel Paraguai</i></strong>, In Venezia, Presso Giambatista Pasquali, 1743; nel 1749, presso il medesimo editore, dell’opera uscì questo volume più un secondo volume che raccoglie documenti sul tema: disamina pionieristica della realtà delle <i>reducciones</i> dei Gesuiti tra le popolazioni indie del Paraguay.</big></p>
+
+<p><big><strong><i>Annali d’Italia dal principio dell’era volgare sino all’anno 1500</i></strong> [ma: 1749], 12 voll., In Milano [ma: Venezia], A spese di Giovambatista Pasquali libraro in Venezia, 1744-1749: tentativo di ricostruire una storia d’Italia al di sopra del frazionamento degli Stati della Penisola, dalla nascita di Cristo al 1749.</big></p>
+
+<p><big><strong><i>Della forza della fantasia umana</i></strong>, In Venezia, Presso Giambatista Pasquali, 1745: indagine dedicata alla natura della fantasia umana e alle sue diverse manifestazioni (sogni, pazzia, visioni, concupiscenza ecc.).</big></p>
+
+<p><big><strong><i>Delle forze dell’intendimento umano, o sia Il pirronismo confutato</i></strong>, Venezia, Presso Giambatista Pasquali, 1745: si sottopone a critica circostanziata lo scetticismo filosofico.</big></p>
+
+<p><big><strong><i>Della regolata divozion de’ cristiani. Trattato di Lamindo Pritanio</i></strong> [pseudonimo di Lodovico Antonio Muratori], In Napoli [ma: Venezia], In Venezia, Nella stamperia di Giambatista Albrizzi q. Gir., 1747: allo scopo di conformare la devozione dei credenti alla fede trinitaria e cristologica professata dalla Chiesa e anche allo scopo di ridare importanza alla dimensione caritativa, vengono avanzate pesanti riserve nei confronti delle superfetazioni introdottesi nel tempo nell’ambito del culto, a partire da quei costosi apparati liturgici barocchi che tanto coinvolgevano il popolo e che limitavano l’entità delle offerte da destinare ai poveri.</big></p> 
+
+<p><big><strong><i>Della pubblica felicità oggetto de’ buoni principi</i></strong>, s.n.t. [ma la data 1749 si ricava dalla dedica]: sull’ideale governo che, ispirato a ragione e virtù, realizzi il benessere dei sudditi.</big></p><br><br>
+
+ 	
+<h5><big><big><big><strong><center>MURATORI E LE «PACI PRIVATE»</center></strong></big></big></big></h5><br><br>
+
+<p><big>La ferma condanna della Chiesa cattolica (sostanziatasi soprattutto nella bolla <i>Ea quae</i> emanata nel 1560 dal papa Pio IV [1499-1565, pontefice dal 1559 alla morte] e nel testo tridentino di tre anni dopo) così come una legislazione secolare via via più ramificata e impetuosa nelle sue mire “razionalizzatrici” (dunque, ostile alle pratiche giudiziarie consuetudinarie, comunitarie e negoziate prodotte autarchicamente dalla società), trasformarono in procedura <i>contra legem</i> l’ormai diffusissimo, e da secoli regolato dalla legge positiva, duello solenne per punto d’onore.<br>
+Nella seconda metà del Cinquecento, la letteratura d’onore si convertì in blocco nella trattatistica sulle «paci private», assecondando – almeno esteriormente – il rigorismo controriformista. Negli scritti di questo tipo, la pace negoziata fra privati (o «rappacificazione») era dipinta come opera giusta, cristiana e in sintonia con l’ordine pubblico, anche se – al medesimo tempo – non si mancava di discorrervi ancora ampiamente del duello, al riparo dagli strali ecclesiastici dietro lo scudo di un titolo “pacifista”. La figura cruciale di suddetta trattatistica era il cavaliere che si proponeva come arbitro-paciere di vertenze d’onore: alla rappacificazione, infatti, non si dedicavano i soggetti coinvolti personalmente, ma interveniva un «mezzano», un gentiluomo autorevole ovvero amico delle parti, affinché le questioni cavalleresche trovassero una soluzione onorevole per ambedue i litiganti senza giungere a uno scontro d’armi.<br>
+La fortunata stagione dei trattati sulle rappacificazioni si concluse ai primi del XVIII secolo, trovando la sua più compiuta e organica sintesi in un’opera di Muratori dal titolo <strong>Introduzione alle paci private</strong> (In Modena, Per Bartolomeo Soliani Stamp. Ducale, 1708).</big></p><br><br>
+
+<h5><big><big><big><strong><center>MURATORI E LA «PUBBLICA FELICITÀ»</center></strong></big></big></big></h5><br><br>
+
+<p><big>Il trattato <strong>Della pubblica felicità oggetto de’ buoni principi</strong> di Muratori uscì dai torchi nel 1749 (ma privo di note tipografiche; l’anno è ricavabile dalla dedica dell’Autore collocata all’interno del volume). Recano la stessa data altre quattro edizioni contraffatte (pirata) del libro, aventi ciascuna Lucca come luogo di stampa (in almeno due casi, tuttavia, l’impressione fu realizzata a Venezia) e senza il nome dell’editore.<br>
+<i>Della pubblica felicità</i> ebbe subito un certo successo e, prima della fine del XVIII secolo, giunse a contare almeno quindici edizioni in italiano e anche due traduzioni in lingua straniera (una in francese e l’altra in castigliano). Dopo un lungo silenzio editoriale, l’opera è stata riproposta a stampa tre volte nel Novecento, e una nel nostro secolo.<br>
+In questo trattato, Muratori illustra alcuni dei princìpi ideali e degli obiettivi di rinnovamento che egli ebbe cari per tutta l’esistenza e che erano condivisi tanto dal duca di Modena Francesco III (1698-1780, al potere dal 1737 alla morte), suo antico allievo, quanto da buona parte della classe dirigente, dei funzionari e dei burocrati estensi tra gli anni Quaranta e gli anni Settanta/Ottanta del Settecento.<br>
+Nell’opera, il Vignolese offre un disegno abbastanza organico di riforma della società e del modo di governo teso alla «felicità» mondana dei sudditi del sovrano, un progetto che ha – come si può immaginare – numerose implicazioni d’ordine morale e che prevede l’impegno continuativo di un saggio reggitore finalizzato a garantire la pace e la giustizia terrene. La «pubblica felicità», secondo Muratori, è una condizione che non può essere conseguita senza l’esercizio diffuso e non saltuario nella comunità delle «arti utili», ossia di tutto ciò che, frutto delle facoltà umane donateci dal benefico Creatore, migliora la qualità della vita terrena dell’uomo, e dunque la medicina, la meccanica, la fisica, l’architettura, l’agricoltura, il commercio, le plurime attività artigianali ecc. Le suddette sue argomentazioni – che si rivelano prossime, per alcuni aspetti, a certe tesi dell’Illuminismo europeo, anche se molti autori riconducibili a esso paiono non avere la stessa premura del nostro concittadino nel tentar di bilanciare «utile» e «onesto» (da lui, oltretutto, sempre legati inscindibilmente al «vero») – orientavano i dibattiti durante la grande stagione delle riforme ducali all’epoca di Francesco III.<br>
+Dopo la scomparsa di Muratori, uno dei personaggi che negli Stati estensi più subirono l’influsso della sua potente lezione morale e politica fu il poeta, saggista, traduttore, drammaturgo, storico ed economista <strong>Agostino Paradisi <i>il Giovane</i></strong>, nato nel 1736 all’interno della rocca di Vignola e morto nel 1783 a Reggio Emilia (all’epoca, chiamata – alternativamente – Reggio di Modena o Reggio di Lombardia).</big></p><br><br>
+	
 	<h4><big><big><big><big><strong><center>LASCIAMO LA PAROLA A MURATORI</center></strong></big></big></big></big></h4><br><br>
 <p><big>Nei brani presenti in questa sezione, si è deciso di conservare inalterate la grafia dei vocaboli e la punteggiatura, e di normalizzare gli accenti alle convenzioni tipografiche odierne.</big></p><br>
 
@@ -118,7 +178,7 @@
 	
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023 - CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022, 2023, 2024 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
